--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
     "autoload": {
         "psr-0": { "Varspool\\PygmentsBundle": "" }
     },
-    "target-dir": "Varspool/PygmentsBundle"
+    "target-dir": "Varspool/PygmentsBundle",
+    "extra": {
+      "branch-alias": {
+        "dev-master": "1.0.x-dev"
+      }
+    }
 }
